WIR - supporting specific users to run marathon containers