@@ -82,7 +82,5 @@ sed -i -n '1h;1!H;${;g;s/'\
 if [[ $MEMORY_ZEPPELIN != "" ]]; then
     echo " - Applying eskimo memory settings from topology in jvm.options"
 
-    export permSize=$((MEMORY_ZEPPELIN / 2))
-
-    sed -i s/"# export ZEPPELIN_MEM"/"export ZEPPELIN_MEM\"=-Xmx"$MEMORY_ZEPPELIN"m -XX:MaxPermSize="$permSize"m\""/g /usr/local/lib/zeppelin/conf/zeppelin-env.sh
+    sed -i s/"# export ZEPPELIN_MEM"/"export ZEPPELIN_MEM\"=-Xmx"$MEMORY_ZEPPELIN"m "/g /usr/local/lib/zeppelin/conf/zeppelin-env.sh
 fi
